assets/css/credits.css
:root {
  font-size: 16px;
  background-color: var(--bs-pink);
}

nav {
  top: -10000px;
  left: -10000px;
  width: 30%;
  background-color: white;
  border: solid black;
  border-radius: 10px;
}

a {
  color: blue;
}

footer {
  bottom: -10000px;
}

.people {
  text-align: center;
  display: flex;
  flex-direction: column;
}

.libraries {
  text-align: center;
  display: flex;
  flex-direction: row;
}

/*# sourceMappingURL=credits.css.map */

